[package]
name = "wasm-eval"
version = "0.1.0"
authors = ["Daniel.Holzner <danielholzner@gmx.de>"]
description = "Code used to demonstrate how to use wasm-pack"
license = "MIT/Apache-2.0"

[dependencies]
eval = "0.4"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
futures = "0.1"
regex = "1"
lazy_static = "1"

[dependencies.wasm-bindgen]
version= "0.2"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib"]
